# shift-hackathon-nantes-2025

./: README.md
EduCoach/: .env.example  LICENSE  README.md  cours.json  prompts.md  pyproject.toml
EduCoach/app/: main.py
EduCoach/app/core/: agent.py  audio_service.py  requests_questions.py  tool_utils.py  tools.py
EduCoach/app/infrastructure/: llm_client.py
EduCoach/app/interface/: streamlit_app.py
EduCoach/app/utils/: graph_generator.py  logger.py  token_metrics.py
EduCoach/config/: logging_config.yml
GenBoost/api_server/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entites.py  example.env  requirements.txt  responseLLM.py  rhese.py  run.py  start.sh
GenBoost/api_server/bruno_collection/: bruno.json  get_definitions online.bru  get_definitions.bru  get_entites online.bru  get_entites.bru  get_explanations online.bru  (+5 more)
GenBoost/mobile-app/: README.md  app.json  package-lock.json  package.json
Monte-Mo-A/: .gitignore  MonteMoi.ipynb  README.md
Monte-Mo-A/back/: chemins_images.json  ffmpegcut.py  llmapp.py  main.py  pixtral_req_1.py  pyproject.toml  requirements.txt  requirements_uv.txt  tes.py  videoFrameExtractor.py
Monte-Mo-A/doc_prompt/: prompt_craft_claude.md  prompt_deepseek.md  prompt_gpt.md  prompt_mistral.md
Monte-Mo-A/quickstart-py-mistral-main/: README.md
Monte-Mo-A/quickstart-py-streamlit-main/: README.md  app.py  requirements.txt
Ne m'oublie pas/: README.md  package-lock.json
Ne m'oublie pas/api/: .env.exemple  .gitignore  app.py  requirement.txt
Ne m'oublie pas/app-front/: index.html  package-lock.json  package.json  tailwind.config.js
Ne m'oublie pas/back/: pyproject.toml
News Age/: README.md  contenu_scrapped.json
News Age/Test User 1/: script_audio.txt
News Age/front/: .env  index.html  package-lock.json  package.json  tailwind.config.js
News Age/newsage-chrome-plugin/: README.md  background.js  content.js  popup.html
aixercice/: README.md  components.json  index.html  n8n.json  package-lock.json  package.json  rollup.config.js  tailwind.config.js  vite.config.js
aixercice/src/: App.jsx  main.jsx
hackmyprompt/: README.md  vulnerabilities.json
hackmyprompt/back/: README.md  index.ts  package.json
hackmyprompt/front/: package-lock.json  package.json
newsage-chrome-plugin/: manifest.json
src/: App.jsx
src/components/: NewChannelModal.jsx
src/pages/: MyMonitoring.jsx
(+158 files in other folders)
